deploy/openshift/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: perf-portal
  labels:
    app.kubernetes.io/name: performance-portal
    app.kubernetes.io/part-of: performance-portal
