deploy/openshift/05-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: perf-portal
  namespace: perf-portal
  labels:
    app.kubernetes.io/name: frontend
    app.kubernetes.io/part-of: performance-portal
spec:
  to:
    kind: Service
    name: frontend
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
